refactor aluno scss

--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.scss
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.scss
@@ -220,6 +220,10 @@
       flex-flow: row;
       justify-content: space-around;
 
+      .raAluno, .nomeAluno, .nascAluno, .ativoAluno {
+        position: relative;
+      }
+
       @media (min-width: 1280px) {
         .raAluno {
           position: relative;
@@ -227,63 +231,52 @@
         }
 
         .nomeAluno {
-          position: relative;
           right: 35px;
         }
 
         .nascAluno {
-          position: relative;
           right: 20px;
         }
 
         .ativoAluno {
-          position: relative;
           right: 10px;
         }
       }
 
       @media (min-width: 1366px) {
         .raAluno {
-          position: relative;
           right: 60px;
         }
       }
 
       @media (min-width: 1600px) {
         .raAluno {
-          position: relative;
           right: 85px;
         }
 
         .nomeAluno {
-          position: relative;
           right: 55px;
         }
 
         .ativoAluno {
-          position: relative;
           right: 5px;
         }
       }
 
       @media (min-width: 1680px) {
         .raAluno {
-          position: relative;
           right: 130px;
         }
 
         .nomeAluno {
-          position: relative;
           right: 85px;
         }
 
         .nascAluno {
-          position: relative;
           right: 35px
         }
 
         .ativoAluno {
-          position: relative;
           left: 5px;
         }
     }
