fix aluno ellipsis

--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.html
@@ -164,7 +164,7 @@
             <p hide show-gt-xs class="raAluno">
               {{data.aluno.ra}}
             </p>
-            <p class="nomeAluno">
+            <p class="nomeAlunocontent">
               {{data.aluno.nome}}
             </p>
             <p hide show-gt-xs class="dataNascAluno">
