--- a/frontend/src/main/frontend/src/app/main/associados/associados.html
+++ b/frontend/src/main/frontend/src/app/main/associados/associados.html
@@ -127,19 +127,19 @@
               </div>
 
           </div>
-          <div class="atributos" layout="row" layout-align="space-around end">
+          <div class="atributosAssociado">
 
-              <label>Nome</label>
+              <label class="associadoNome">Nome</label>
 
-              <label hide show-gt-xs>Cpf</label>
+              <label hide show-gt-xs class="associadoCpf">Cpf</label>
 
-              <label hide show-gt-xs>Telefone</label>
+              <label hide show-gt-xs class="associadoTelefone">Telefone</label>
 
-              <label hide show-gt-xs>Email</label>
+              <label hide show-gt-xs class="associadoEmail">Email</label>
 
-              <label hide show-gt-xs>Paga em:</label>
+              <label hide show-gt-xs class="associadoPago">Paga em:</label>
 
-              <label>Valor</label>
+              <label class="associadoValor">Valor</label>
 
           </div>
         </md-subheader>
@@ -149,29 +149,29 @@
 
           <md-checkbox ng-checked="vm.exists(associado, vm.selectedAssociados)" ng-click="vm.toggleSelectAssociado(associado, $event)" aria-label="{{vm.exists(associado, vm.selectedAssociados) ? 'Deselect' : 'Select'}}">
           </md-checkbox>
-          <div class="item" layout="row" flex>
+          <div class="item" layout="row" flex layout-align="space-between center">
 
-          <p class="text-truncate font-weight-600 texto nomeAssociado" flex="20">
+          <p  font-weight-600 class="texto">
             {{associado.nome}}
           </p>
 
-          <p class="hide show-gt-xs numero cpfAssociado" flex="20">
+          <p hide show-gt-xs class="numero">
             {{associado.cpf}}
           </p>
 
-          <p class="hide show-gt-xs telefone" flex="40">
+          <p hide show-gt-xs>
             {{associado.celular}}
           </p>
 
-          <p class="hide show-gt-xs emailAssociado" flex="25">
+          <p hide show-gt-xs class="texto">
             {{associado.email}}
           </p>
 
-          <p class="hide show-gt-xs texto pagamentoAssociado" flex="20">
+          <p hide show-gt-xs>
             Dinheiro
           </p>
 
-          <p class="hide show numero valorAssociado" flex="20">
+          <p class="numero valorAssociado">
             {{associado.valorAtual | currency : "R$ "}}
           </p>
         </div>
