--- a/frontend/src/main/frontend/src/app/main/associados/dialogs/associado/associado-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/associados/dialogs/associado/associado-dialog.html
@@ -27,13 +27,13 @@
       <md-input-container class="md-icon-float md-block">
         <label>Celular</label>
         <md-icon md-font-icon="icon-phone"></md-icon>
-        <input ng-model="vm.associado.celular" type="text" mask="(99) 9?9999-9999">
+        <input ng-model="vm.associado.celular" type="text" mask="(99) 9?9999-9999" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
         <label>E-mail</label>
         <md-icon md-font-icon="icon-email"></md-icon>
-        <input ng-model="vm.associado.email" type="email">
+        <input ng-model="vm.associado.email" type="email" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block" ng-if="vm.associado.formaPgto == 'Cartão'">
