refactor educador with mediaquerys

--- a/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.html
@@ -39,7 +39,7 @@
       <md-input-container class="md-icon-float md-block">
         <label>Telefone</label>
         <md-icon md-font-icon="icon-phone"></md-icon>
-        <input ng-model="vm.educador.telefone" type="text" mask="(99) 9?9999-9999">
+        <input ng-model="vm.educador.telefone" type="text" mask="(99) 9?9999-9999" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
@@ -51,7 +51,7 @@
       <md-input-container class="md-icon-float md-block">
         <label>E-mail</label>
         <md-icon md-font-icon="icon-email"></md-icon>
-        <input ng-model="vm.educador.email" type="email">
+        <input ng-model="vm.educador.email" type="email" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
