Fix educador hour in and out

--- a/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.html
@@ -129,13 +129,13 @@
       <md-input-container class="md-icon-float md-block">
         <label>Horário de Entrada</label>
         <md-icon md-font-icon="icon-clock"></md-icon>
-        <input ng-model="vm.educador.horaEntrada" type="text" mask="99:99" required>
+        <input ng-model="vm.educador.horaEntrada" type="time" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
         <label>Horário de Saída</label>
         <md-icon md-font-icon="icon-clock"></md-icon>
-        <input ng-model="vm.educador.horaSaida" type="text" mask="99:99" required>
+        <input ng-model="vm.educador.horaSaida" type="time" required>
       </md-input-container>
 
     <md-dialog-actions layout="row" layout-align="space-between center">
