--- a/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
@@ -45,80 +45,67 @@
         </md-input-container>
       </div>
 
-      <h2 class="alunosinout">Alunos dentro da Turma:</h2>
-      <div class="headers" display="flex" layout="row" layout-margin layout-padding>
-        <h3 flex="20">RA</h3>
-        <h3 flex="20">Nome</h3>
-        <h3 flex="20">Idade</h3>
-        <h3 flex="15">Data de nascimento</h3>
+      <div ng-if="!vm.newTurma">
+        <h2 class="alunosinout">Alunos dentro da Turma:</h2>
+        <div class="headers" display="flex" layout="row" layout-margin layout-padding>
+          <h3 flex="20">RA</h3>
+          <h3 flex="20">Nome</h3>
+          <h3 flex="20">Idade</h3>
+          <h3 flex="15">Data de nascimento</h3>
+        </div>
+        <md-list-item class="aluno-item md-white-bg"  ng-repeat="a in vm.alunosDentroTurma" display="flex" layout-margin layout-padding>
+            <p class="show-gt-xs numero" flex="20">
+              {{a.aluno.ra}}
+            </p>
+
+            <p class="show-gt-xs texto" flex="20">
+              {{a.aluno.nome}}
+            </p>
+
+            <p class="numero" flex="20">
+              {{a.aluno.idade}} anos
+            </p>
+
+            <p class="data" flex="20">
+              {{a.aluno.dataNascimento}}
+            </p>
+
+            <md-button class="md-raised md-warn adicionarButton" ng-click="vm.removerAluno(a)">
+              Remover
+            </md-button>
+        </md-list-item>
+
+        <h2 class="alunosinout">Alunos fora da Turma:</h2>
+        <div class="headers" display="flex" layout="row" layout-margin layout-padding>
+          <h3 flex="20">RA</h3>
+          <h3 flex="20">Nome</h3>
+          <h3 flex="20">Idade</h3>
+          <h3 flex="15">Data de nascimento</h3>
+        </div>
+
+        <md-list-item class="aluno-item md-white-bg" ng-repeat="a in vm.alunosForaTurma track by a.aluno.ra" display="flex" layout-margin layout-padding>
+            <p class="show-gt-xs numero" flex="20">
+              {{a.aluno.ra}}
+            </p>
+
+            <p class="show-gt-xs texto" flex="20">
+              {{a.aluno.nome}}
+            </p>
+            <p class="numero" flex="20">
+              {{a.aluno.idade}} anos
+            </p>
+
+            <p class="data" flex="20">
+              {{a.aluno.dataNascimento}}
+            </p>
+
+            <md-button class="md-raised md-accent adicionarButton" ng-click="vm.adicionarAluno(a)">
+              Adicionar
+            </md-button>
+        </md-list-item>
       </div>
-      <md-list-item class="aluno-item md-white-bg"  ng-repeat="a in vm.alunosDentroTurma" display="flex" layout-margin layout-padding>
-          <p class="show-gt-xs numero" flex="20">
-            {{a.aluno.ra}}
-          </p>
 
-          <p class="show-gt-xs texto" flex="20">
-            {{a.aluno.nome}}
-          </p>
-
-          <p class="numero" flex="20">
-            {{a.aluno.idade}} anos
-          </p>
-
-          <p class="data" flex="20">
-            {{a.aluno.dataNascimento}}
-          </p>
-
-          <md-button class="md-raised md-warn adicionarButton" ng-click="vm.removerAluno(a)">
-            Remover
-          </md-button>
-      </md-list-item>
-
-      <h2 class="alunosinout">Alunos fora da Turma:</h2>
-      <div class="headers" display="flex" layout="row" layout-margin layout-padding>
-        <h3 flex="20">RA</h3>
-        <h3 flex="20">Nome</h3>
-        <h3 flex="20">Idade</h3>
-        <h3 flex="15">Data de nascimento</h3>
-      </div>
-
-      <md-list-item class="aluno-item md-white-bg" ng-repeat="a in vm.alunosForaTurma track by a.aluno.ra" display="flex" layout-margin layout-padding>
-          <p class="show-gt-xs numero" flex="20">
-            {{a.aluno.ra}}
-          </p>
-
-          <p class="show-gt-xs texto" flex="20">
-            {{a.aluno.nome}}
-          </p>
-          <p class="numero" flex="20">
-            {{a.aluno.idade}} anos
-          </p>
-
-          <p class="data" flex="20">
-            {{a.aluno.dataNascimento}}
-          </p>
-
-          <md-button class="md-raised md-accent adicionarButton" ng-click="vm.adicionarAluno(a)">
-            Adicionar
-          </md-button>
-      </md-list-item>
-
-      <div layout="column" layout-gt-xs="row" flex ng-repeat="aluno in vm.alunos track by a.aluno.ra">
-        <md-input-container flex="100" flex-gt-xs="15">
-          <input type="text" ng-model="aluno.ra" placeholder="Ra do Aluno" value="{{aluno.ra}}">
-        </md-input-container>
-
-        <md-button class="md-raised md-accent adicionarButton" ng-click="vm.addAutomovel(c)" ng-if="vm.isLastAutomovel(c)">
-          Adicionar
-        </md-button>
-
-        <md-button class="md-raised md-warn adicionarButton" ng-click="vm.removeAutomovel(c)">
-          Remover
-        </md-button>
-
-      </div>
     </md-dialog-content>
-
 
     <md-dialog-actions layout="row" layout-align="space-between center">
       <div layout="row" layout-align="start center">
