Fix typo on turma dialog

--- a/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
@@ -51,7 +51,7 @@
           <h3 flex="20">RA</h3>
           <h3 flex="20">Nome</h3>
           <h3 flex="20">Idade</h3>
-          <h3 flex="15">Data de nascimento</h3>
+          <h3 flex="15">Data de Nascimento</h3>
         </div>
         <md-list-item class="aluno-item md-white-bg"  ng-repeat="a in vm.alunosDentroTurma" display="flex" layout-margin layout-padding>
             <p class="show-gt-xs numero" flex="20">
@@ -80,7 +80,7 @@
           <h3 flex="20">RA</h3>
           <h3 flex="20">Nome</h3>
           <h3 flex="20">Idade</h3>
-          <h3 flex="15">Data de nascimento</h3>
+          <h3 flex="15">Data de Nascimento</h3>
         </div>
 
         <md-list-item class="aluno-item md-white-bg" ng-repeat="a in vm.alunosForaTurma track by a.aluno.ra" display="flex" layout-margin layout-padding>
