Remove required from RG input

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -49,7 +49,7 @@
 
                                     <md-input-container flex="100" flex-gt-xs="15">
                                         <label>RG</label>
-                                        <input type="text" name="rg" ng-model="vm.data.aluno.rg" md-maxlength="12" mask="99.999.999-w" required>
+                                        <input type="text" name="rg" ng-model="vm.data.aluno.rg" md-maxlength="12" mask="99.999.999-w">
                                     </md-input-container>
 
                                     <md-input-container flex="100" flex-gt-xs="15">
