Fix vehicle year input and fix CPF validation on legal persons

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -167,7 +167,7 @@
                                         </md-input-container>
 
                                         <md-input-container flex="100" flex-gt-xs="15">
-                                            <input type="text" name="cpf" ng-model="vm.pai.cpf" md-maxlength="14" mask="999.999.999-99" placeholder="CPF">
+                                            <input type="text" cpf name="cpf" ng-model="vm.pai.cpf" md-maxlength="14" mask="999.999.999-99" placeholder="CPF">
                                         </md-input-container>
                                     </div>
 
@@ -207,7 +207,7 @@
                                         </md-input-container>
 
                                         <md-input-container flex="100" flex-gt-xs="15">
-                                            <input type="text" name="cpf" ng-model="vm.mae.cpf" md-maxlength="14" mask="999.999.999-99" placeholder="CPF">
+                                            <input type="text" cpf name="cpf" ng-model="vm.mae.cpf" md-maxlength="14" mask="999.999.999-99" placeholder="CPF">
                                         </md-input-container>
                                     </div>
                                     <div layout="row" layout-gt-xs="row" layout-margin layout-padding layout-align="space-around none" style="height: 100vh, width: 100vh" flex>
@@ -246,7 +246,7 @@
                                         </md-input-container>
 
                                         <md-input-container flex="50" flex-gt-xs="15">
-                                            <input type="text" name="cpf" ng-model="c.cpf" md-maxlength="14" mask="999.999.999-99" placeholder="CPF">
+                                            <input type="text" cpf name="cpf" ng-model="c.cpf" md-maxlength="14" mask="999.999.999-99" placeholder="CPF">
                                         </md-input-container>
 
 
@@ -589,7 +589,7 @@
                                         </md-input-container>
 
                                         <md-input-container flex="100" flex-gt-xs="5">
-                                            <input type="text" ng-model="c.ano" placeholder="Ano">
+                                            <input type="number" ng-model="c.ano" placeholder="Ano">
                                         </md-input-container>
 
                                         <p>
