--- a/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
@@ -22,7 +22,7 @@
         <md-input-container class="md-icon-float md-block" flex="100" flex-gt-xs="25" required>
           <label>Nome do Educador</label>
           <md-icon md-font-icon="icon-account"></md-icon>
-          <md-select ng-model="vm.educador" ng-change="vm.setarCpf(vm.educador)" ng-disabled="!vm.newTurma">
+          <md-select ng-model="vm.educador" ng-change="vm.setarCpf(vm.educador)" ng-disabled="!vm.newTurma" required>
             <md-option ng-repeat="edu in vm.educadores" value="{{edu}}">
               {{edu.nome}}
             </md-option>
@@ -41,7 +41,7 @@
 
         <md-input-container flex="100" flex-gt-xs="25">
           <md-icon md-font-icon="icon-clipboard-text"></md-icon>
-          <input type="text" name="nome" ng-model="vm.turma.nome" placeholder="Nome da Turma">
+          <input type="text" name="nome" ng-model="vm.turma.nome" placeholder="Nome da Turma" required>
         </md-input-container>
       </div>
 
