--- a/frontend/src/main/frontend/src/app/main/historicoOcorrencia/historicoOcorrencia.html
+++ b/frontend/src/main/frontend/src/app/main/historicoOcorrencia/historicoOcorrencia.html
@@ -7,7 +7,7 @@
                 <span class="logo-icon">
           <md-icon md-font-icon="icon-account-box" class="s24"></md-icon>
         </span>
-                <span class="logo-text">Ocorrencias</span>
+                <span class="logo-text">Ocorrências</span>
             </div>
         </div>
 
